<resources>
    <string name="app_name">RestPolloloko</string>
    <string name="productos">PRODUCTOS</string>
    <string name="pedidos">PEDIDOS</string>
    <string name="altacamarero">Alta Camarero</string>
    <string name="altaproducto">Alta Producto</string>
    <string name="botonCrear">CREAR</string>
    <string name="nombre">Nombre:</string>
    <string name="codigo">Código:</string>
    <string name="descripcion">Descripción</string>
    <string name="descatalogado">Descatalogado</string>
    <string name="categoria">Categoria</string>
    <string name="fecha">Fecha</string>
    <string name="precio">Precio</string>
    <string name="mesa">Mesa</string>
    <string name="camarero">Camarero</string>
</resources>
